--- a/TagManager/VideoManager/VideoManager.csproj
+++ b/TagManager/VideoManager/VideoManager.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Npgsql" Version="8.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Scripts\" />
+  </ItemGroup>
+
 </Project>
